# plotnine.org

./: .gitignore  .gitmodules  CNAME  Makefile  README.md  _plotnine_examples.py  about-plotnine.html  about.html  api.html  blog.html  changelog.html  external-resources.html  external-resources.qmd  gallery.html  genindex.html  glossary.html  index.html  installation.html  license.html  listings.json  objects.inv  package.json  pyproject.toml  search.html  search.json  searchindex.js  sitemap.xml  tailwind.config.js  tutorials.html
_modules/: index.html
_static/: documentation_options.js
dev/: about.html  blog.html  changelog.html  external-resources.html  index.html  index.html.bak  license.html  listings.json  objects.inv  search.json  sitemap.xml
gallery/: PlotnineAnimation.html  a-century-of-screams.html  a-change-in-rank.html  aes.html  after_scale.html  an-elaborate-range-plot.html  annotated-heatmap.html  anscombes-quartet.html  area-under-a-line.html  bar-plot-with-2-variables.html  box-and-whiskers.html  coal-production.html  counts-and-percentages-in-bar-plots.html  density-with-some-shade.html  faithfully-waiting-to-erupt.html  geom_abline.html  geom_area.html  geom_bar.html  geom_boxplot.html  geom_col.html  geom_density.html  geom_histogram.html  geom_line.html  geom_map.html  geom_point.html  geom_segment.html  geom_smooth.html  geom_violin.html  horizontal-bar-chart.html  index.html  infant-deaths-in-north-carolina.html  labs.html  manipulate-date-breaks-and-date-labels.html  manipulating-date-breaks-and-date-labels.html  mondrian.html  (+21 more)
(+2032 files in other folders)
