[project]
name = "plotnine-org"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "adjusttext>=1.3.0",
    "geodatasets>=2024.8.0",
    "geopandas>=1.0.1",
    "jupyter>=1.1.1",
    "qrenderer",
]

[tool.uv.sources]
qrenderer = { git = "https://github.com/has2k1/qrenderer.git" }
